--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -66,7 +66,7 @@ $overlay-blue-darker:hsl(214, 18%, 15%);
 $overlay-blue-darkest:hsl(213, 18%, 10%);
 $overlay-blue-black:hsl(213, 18%, 5%);
 $overlay-black:hsl(213, 18%, 1%);
-$overlay-blue-light: hwb(211 28% 61%);
+$overlay-blue-light: hsl(210, 16%, 33%);
 $nav-background: #29323c;
 $nav-active-background: #1b2127;
 $ul-background: #1f1e1e;
