--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -358,12 +358,19 @@
                 img {
                     opacity: 1;
                     animation: none;
+
                     &.about-img-2 {
                         opacity: 0;
                         animation: none;
                     }
-                    }
                 }
+            }
+
+            &.about-page-img {
+                img {
+                    animation: none;
+                }
+            }
 
     }
     }
