--- a/sass/style.scss
+++ b/sass/style.scss
@@ -23,6 +23,7 @@
 html {
     scroll-behavior: smooth;
     font-family: $font-content;
+    // scroll-padding-top: 1rem;
 }
 body {
     color: $overlay-blue-darker;
