--- a/css/style.css
+++ b/css/style.css
@@ -377,6 +377,10 @@
   transform: translateY(0);
 }
 
+/* LOADER SCREEN PSEUDO BACKGROUND */
+/* LOADER PSEUDO BG FADE OUT */
+/* ROTATE SPINNER */
+/* SPINNER FADE OUT */
 .header {
   position: fixed;
   z-index: 50;
