--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -431,7 +431,78 @@
 }
 
 
+/* LOADER SCREEN PSEUDO BACKGROUND */
+// .loader_bg::after {
+//     content: '';
+//     position: absolute;
+//     inset: 0;
+//     background: hsl(213, 18%, 10%);
+//     z-index: -1;
+//     animation: zoom-out 2s ease 4s forwards;
+//   }
+//   /* 3 SECTOR SPINNER */
+//   .loader_bg .spinner {
+//     height: 5rem;
+//     width: 5rem;
+//     position: relative;
+//     display: grid;
+//     place-items: center;
+//     isolation: isolate;
+//     animation: spinner-out 1s ease 4s forwards;
+//   }
+//   /* GENERAL SECTOR STYLE */
+//   .spinner .sector {
+//     position: absolute;
+//     width: 100%;
+//     height: 100%;
+//     border-radius: 50%;
+//     border: .25rem solid transparent;
+//     animation: rotate 3s infinite;
+//     mix-blend-mode: overlay;
+//   }
+//   /* SECTOR 1 */
+//   .sector.sector-1 {
+//     border-top-color: #b60f30;
+//     animation-duration: 1.5s;
+//     animation-timing-function: ease-in-out;
+//   }
+//   /* SECTOR 2 */
+//   .sector.sector-2 {
+//     border-right-color: hsl(210, 19%, 75%);
+//     animation-duration: 2s;
+//     animation-timing-function: ease-in;
+//   }
+//   /* SECTOR 3 */
+//   .sector.sector-3 {
+//     border-left-color: hsl(210, 16%, 33%);
+//     animation-duration: 2.5s;
+//     animation-timing-function: ease-out;
+//   }
 
+  /* LOADER PSEUDO BG FADE OUT */
+//   @keyframes zoom-out {
+//     100% {
+//       opacity: 0;
+//     }
+//   }
+
+  /* ROTATE SPINNER */
+//   @keyframes rotate {
+//     0% {
+//       transform: rotate(0);
+//     }
+
+//     100% {
+//       transform: rotate(360deg);
+//     }
+//   }
+
+  /* SPINNER FADE OUT */
+//   @keyframes spinner-out {
+//     100% {
+//       transform: scale(0);
+//     }
+//   }
 
 // LOADER
 // .loader_bg {
