--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -349,7 +349,7 @@
             }
         }
         .footer-bottom {
-            // border: 2px solid skyblue;
+            scroll-margin-top: 5vh;
             padding: 5vh 5vw;
             display: flex;
             flex-direction: column;
@@ -363,7 +363,6 @@
                 gap: 1rem;
             }
             img {
-                padding-top: 5vh;
                 width: 10rem;
                 border-radius: $border-radius-sm;
                 @include lg {
