--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,12 +5,11 @@
 @import 'utilities';
 @import 'header';
 @import 'hero';
-@import 'cube';
 @import 'skills';
-@import 'contact';
-@import 'projects';
 @import 'work';
 @import 'about';
+@import 'projects';
+@import 'contact';
 @import 'footer';
 @import 'form';
 *, ::before, ::after {
@@ -19,7 +18,6 @@
     box-sizing: border-box;
 }
 
-
 html {
     scroll-behavior: smooth;
     font-family: $font-content;
@@ -27,37 +25,21 @@ html {
 }
 body {
     color: $overlay-blue-darker;
-
     img {
+        display: block;
         max-width: 100%;
     }
     a {
         text-decoration: none;
         transition: .25s;
-        @media (max-width: 820px){
-            &:active {
-                color: $span-gold;
-            }
-        }
-        @media (min-width: 820px){
-            &:hover {
-                color: $span-gold;
-            }
-        }
     }
 
     p {
-        // color: $overlay-blue-darkest;
         line-height: 1.5;
         font-weight: 400;
     }
-
-    span {
-        color: $span-crimson;
-    }
 }
 main {
-    // border: 2px solid red;
     scroll-margin-top: 5vh;
 }
 section {
