--- a/css/style.css
+++ b/css/style.css
@@ -2338,8 +2338,8 @@
 }
 .work .work-intro h3 {
   text-transform: capitalize;
-  font-size: 1.25rem;
-  font-size: clamp(1.25rem, 4vw, 2rem);
+  font-size: 1.5rem;
+  font-size: clamp(1.5rem, 4vw, 2rem);
   text-align: center;
   position: relative;
   width: max-content;
@@ -2353,11 +2353,18 @@
 .work .work-intro h3::after {
   content: "";
   position: absolute;
-  bottom: -0.25rem;
+  bottom: -0.5rem;
   left: 0;
   width: 100%;
   height: 0.125rem;
-  background: #0007;
+  background: linear-gradient(90deg, transparent, #0007, transparent);
+}
+.work .work-intro.io-item h3::after {
+  transform: scaleX(0);
+  transition: 1.5s;
+}
+.work .work-intro.active-item h3::after {
+  transform: scaleX(1);
 }
 .work .work-container {
   margin-top: 10vh;
