--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -12,8 +12,8 @@
         // border: 2px solid red;
         h3 {
             text-transform: capitalize;
-            font-size: 1.25rem;
-            font-size: clamp(1.25rem, 4vw, 2rem);
+            font-size: 1.5rem;
+            font-size: clamp(1.5rem, 4vw, 2rem);
             text-align: center;
             position: relative;
             width: max-content;
@@ -26,11 +26,27 @@
             &::after {
                 content: '';
                 position: absolute;
-                bottom: -.25rem;
+                bottom: -.5rem;
                 left: 0;
                 width: 100%;
                 height: .125rem;
-                background: #0007;
+                background: linear-gradient(90deg, transparent, #0007, transparent);
+            }
+        }
+
+        &.io-item {
+            h3 {
+                &::after {
+                    transform: scaleX(0);
+                    transition: 1.5s;
+                }
+            }
+        }
+        &.active-item {
+            h3 {
+                &::after {
+                    transform: scaleX(1);
+                }
             }
         }
     }
