--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -219,7 +219,7 @@
                     justify-content: space-between;
                     align-items: center;
                     gap: 1rem;
-                    margin-bottom: 5vh;
+                    // margin-bottom: 5vh;
                     @include md {
                         justify-content: start;
                     }
