--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -422,10 +422,10 @@
         position: absolute;
         inset: 0;
         z-index: -1;
-        background: $overlay-blue-dark;
+        background: $overlay-blue-light;
         img {
             // border: 5px solid green;
-            // mix-blend-mode: overlay;
+            mix-blend-mode: overlay;
             height: 100%;
             width: 100%;
             object-fit: cover;
