--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,25 @@
   transform: translateY(0) skewY(-40deg);
 }
 
+.skip-link {
+  background: #475462;
+  position: fixed;
+  z-index: 99;
+  top: 0;
+  left: 0;
+  right: 0;
+  text-align: center;
+  padding: 0.5rem;
+  color: #f4f4f4;
+  margin: 0 auto;
+  text-transform: capitalize;
+  transition: 0.5s;
+  transform: translateY(-10vh);
+}
+.skip-link:focus {
+  transform: translateY(0);
+}
+
 /*progress bar*/
 /* The progress container (grey background) */
 .progress-container {
@@ -290,10 +309,7 @@
 .bottom-nav .link-item {
   width: 100%;
   height: 100%;
-  display: grid;
-  place-items: center;
-  place-content: center;
-  border-radius: 0.5rem;
+  border-radius: 1rem;
   opacity: 0;
   transition: 0.25s;
   position: relative;
@@ -311,7 +327,7 @@
   transition: 0.25s;
   width: 100%;
   cursor: default;
-  border-radius: 0.5rem;
+  border-radius: 1rem;
   position: relative;
 }
 .bottom-nav .link-item a::after {
@@ -332,7 +348,7 @@
   font-size: 1.125rem;
   font-weight: 700;
   color: #b3c0cc;
-  transition: 0.25s;
+  transition: 0.125s;
 }
 @media (min-width: 820px) {
   .bottom-nav .link-item a {
@@ -343,11 +359,33 @@
   transition: 0.25s;
 }
 .bottom-nav .link-item a:active::after {
-  opacity: 1;
   transform: scaleX(1);
+  transition: 0.125s;
+  opacity: 0.5;
 }
 .bottom-nav .link-item a:hover i {
   color: #f4f4f4;
+}
+.bottom-nav .link-item a:hover::after {
+  animation: click 0.25s;
+}
+@keyframes click {
+  0% {
+    transform: scaleX(0.5);
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+    transform: scaleX(1);
+  }
+  80% {
+    opacity: 0.5;
+    transform: scaleX(1);
+  }
+  100% {
+    opacity: 0;
+    transform: scaleX(1);
+  }
 }
 .bottom-nav.active-bottom-nav {
   transform: translateY(0vh);
@@ -356,25 +394,6 @@
   transform: translateY(0);
   opacity: 1;
   transition: 0.5s;
-}
-
-.skip-link {
-  background: #475462;
-  position: fixed;
-  z-index: 99;
-  top: 0;
-  left: 0;
-  right: 0;
-  text-align: center;
-  padding: 0.5rem;
-  color: #f4f4f4;
-  margin: 0 auto;
-  text-transform: capitalize;
-  transition: 0.5s;
-  transform: translateY(-10vh);
-}
-.skip-link:focus {
-  transform: translateY(0);
 }
 
 /* LOADER SCREEN PSEUDO BACKGROUND */
