--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -1,5 +1,3 @@
-
-
 // HAMBURGER TOGGLE
 #header .hamburger {
     font-size: 10px;
@@ -144,6 +142,25 @@
 
         // end of hamburger bars active state
     // end of hamburger bars
+}
+// SKIP LINK
+.skip-link {
+    background: $overlay-blue-light;
+    position: fixed;
+    z-index: 99;
+    top: 0;
+    left: 0;
+    right: 0;
+    text-align: center;
+    padding: .5rem;
+    color: #f4f4f4;
+    margin: 0 auto;
+    text-transform: capitalize;
+    transition: .5s;
+    transform: translateY(-10vh);
+    &:focus {
+        transform: translateY(0);
+    }
 }
 /*progress bar*/
 /* The progress container (grey background) */
@@ -318,20 +335,16 @@
 
     .link-item {
         // border: 1px solid yellow;
-        // background: $overlay-blue-darker;
         width: 100%;
         height: 100%;
-        display: grid;
-        place-items: center;
-        place-content: center;
-        border-radius: .5rem;
-        // padding: .15rem;
+        border-radius: 1rem;;
         opacity: 0;
         transition: .25s;
         position: relative;
         transform: translateY(1rem);
 
         a {
+            // border: 2px solid red;
             color: $text-light;
             font-size: .75rem;
             text-transform: capitalize;
@@ -343,8 +356,7 @@
             transition: .25s;
             width: 100%;
             cursor: default;
-            // border: 2px solid red;
-            border-radius: .5rem;
+            border-radius: 1rem;
             position: relative;
 
             &::after {
@@ -360,12 +372,13 @@
                 transition: .125s;
                 transform: scaleX(.5);
                 opacity: 0;
+                
             }
             i {
                 font-size: 1.125rem;
                 font-weight: 700;
                 color: $brand;
-                transition: .25s;
+                transition: .125s;
             }
             @include lg {
                 padding: .5rem 5rem;
@@ -375,15 +388,43 @@
             // HOVER AND ACTIVE
             &:active {
                 transition: .25s;
+
                 &::after {
-                    // animation: click .125s forwards;
-                    opacity: 1;
                     transform: scaleX(1);
+                    transition: .125s;
+                    opacity: .5;
                 }
             }
+
             &:hover {
                 i {
                     color: $text-light;
+                }
+
+                &::after {
+                    animation: click .25s;
+
+                    @keyframes click {
+                        0% {
+                            transform: scaleX(.5);
+                            opacity: 0;
+                        }
+
+                        50% {
+                            opacity: 1;
+                            transform: scaleX(1);
+                        }
+
+                        80% {
+                            opacity: .5;
+                            transform: scaleX(1);
+                        }
+
+                        100% {
+                            opacity: 0;
+                            transform: scaleX(1);
+                        }
+                    }
                 }
             }
 
@@ -410,25 +451,7 @@
     
 }
 
-// SKIP LINK
-.skip-link {
-    background: $overlay-blue-light;
-    position: fixed;
-    z-index: 99;
-    top: 0;
-    left: 0;
-    right: 0;
-    text-align: center;
-    padding: .5rem;
-    color: #f4f4f4;
-    margin: 0 auto;
-    text-transform: capitalize;
-    transition: .5s;
-    transform: translateY(-10vh);
-    &:focus {
-        transform: translateY(0);
-    }
-}
+
 
 
 /* LOADER SCREEN PSEUDO BACKGROUND */
