--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -1,6 +1,10 @@
 // contact
-    // border: 2px solid red;
-    // padding: 0 5vw;
+// padding: 0 5vw;
+    #contact {
+        // border: 2px solid red;
+        scroll-margin-top: 5vh;
+
+    }
     .contact {
         flex-direction: column;
         justify-content: start;
@@ -8,17 +12,13 @@
         position: relative;
         transform-style: preserve-3d;
         background: #f4f4f4;
-        // border: 2px solid blue;
         padding: 10vh 5vw;
         @include lg {
             padding: 10vh 5vw 5vh;
         }
         // section-title
         .contact-header {
-            width: 100%;
-            height: auto;
-            background: #f4f4f4;
-            z-index: 10;
+            margin-bottom: 10vh;
         }
         // end of section-title
         // contact items container
