--- a/css/style.css
+++ b/css/style.css
@@ -2743,102 +2743,6 @@
     height: 100%;
   }
 }
-.about .col-right .about-title {
-  border: 4px solid yellow;
-  display: flex;
-  flex-direction: column;
-  padding: 1em 1.3em;
-  cursor: pointer;
-}
-.about .col-right .about-title #cv-download {
-  text-align: center;
-  margin: 2.5em 0;
-  padding: 0.5em 1em;
-  font-size: 0.6em;
-  font-weight: 600;
-  text-transform: capitalize;
-  color: #b3c0cc;
-  background-color: #dc143c;
-  border-radius: 10px;
-  transition: 0.5s ease;
-  position: absolute;
-  opacity: 0;
-  z-index: 20;
-  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.05), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 0.025rem 0.25rem 0.5rem rgba(0, 0, 0, 0.15);
-}
-.about .col-right .about-title h2 {
-  display: inline-block;
-  border-radius: 10px;
-  font-size: 1em;
-  font-weight: 500;
-  margin-bottom: 1em;
-  padding: 0.5em;
-  transition: 0.5s ease;
-  position: relative;
-}
-.about .col-right .about-title h2::before, .about .col-right .about-title h2::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  transition: 0.5s ease;
-  border-radius: 10px;
-}
-.about .col-right .about-title h2::before {
-  box-shadow: inset 3px 3px 4px rgba(0, 0, 0, 0.2), inset -3px -3px 4px rgba(221, 221, 221, 0.5);
-}
-.about .col-right .about-title h2::after {
-  opacity: 0;
-  box-shadow: inset 3px 3px 4px rgba(221, 221, 221, 0.15), inset -3px -3px 4px rgba(0, 0, 0, 0.15), 5px 5px 3px rgba(0, 0, 0, 0.15);
-}
-.about .col-right .about-title:hover #cv-download {
-  letter-spacing: 0.1em;
-}
-.about .col-right:hover h2::before {
-  opacity: 0;
-}
-.about .col-right:hover h2::after {
-  opacity: 1;
-}
-.about .col-right button {
-  background: linear-gradient(0deg, #750b20, #dd134c);
-  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.05), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 0.025rem 0.25rem 0.5rem rgba(0, 0, 0, 0.15);
-  color: #fff;
-  margin: 1rem auto;
-  padding: 0.7rem;
-  width: 10rem;
-  cursor: pointer;
-  border-radius: 0.5rem;
-  border: none;
-  text-transform: capitalize;
-  letter-spacing: 0.05rem;
-  transition: 0.3s;
-  position: relative;
-}
-.about .col-right button.open {
-  letter-spacing: normal;
-}
-.about .col-right button.open::after {
-  position: absolute;
-  content: "close";
-  display: grid;
-  place-items: center;
-  top: 0;
-  left: 0;
-  border-radius: 0.5rem;
-  width: 100%;
-  height: 100%;
-  opacity: 1;
-  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.2), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0.025rem 0.225rem 0.25rem rgba(0, 0, 0, 0.25);
-  background: linear-gradient(0deg, #dc134c, #750b20);
-  transition: 0.2s;
-}
-.about .col-right button:hover {
-  transform: scale(0.97);
-  letter-spacing: normal;
-}
 .about .col-right .article-container article .about-intro p {
   font-weight: 500;
   text-align: left;
@@ -2893,8 +2797,17 @@
   padding-bottom: 0.5rem;
   margin-bottom: 5vh;
   position: relative;
-  border-bottom: 1px solid rgba(0, 0, 128, 0.2);
+  border-bottom: 1px solid #b3c0cc;
   transition: border 0.5s;
+}
+.about .col-right .article-container article .article-body .body-item::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: #fafafa;
+  z-index: -1;
+  opacity: 0;
+  transition: 0.25s;
 }
 @media (min-width: 820px) {
   .about .col-right .article-container article .article-body .body-item {
@@ -2932,7 +2845,11 @@
   opacity: 0.9;
 }
 .about .col-right .article-container article .article-body .body-item:hover {
-  border-bottom: 1px solid navy;
+  border-bottom-color: #475462;
+  background: #fafafa;
+}
+.about .col-right .article-container article .article-body .body-item:hover::after {
+  opacity: 1;
 }
 .about .col-right:hover #cv-download {
   transition: 1s ease;
