--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -40,124 +40,6 @@
             // overflow: hidden;
             // border: 2px solid yellow;
         }
-        // end of desktop
-        .about-title {
-            border: 4px solid yellow;
-            display: flex;
-            flex-direction: column;
-            padding: 1em 1.3em;
-            cursor: pointer;
-            // request cv link
-            #cv-download {
-                text-align: center;
-                margin: 2.5em 0;
-                padding: .5em 1em;
-                font-size: .6em;
-                font-weight: 600;
-                text-transform: capitalize;
-                color: $brand;
-                background-color: #dc143c;
-                border-radius: 10px;
-                transition: .5s ease;
-                position: absolute;
-                opacity: 0;
-                z-index: 20;
-                box-shadow: $box-light-top-sm;
-            }
-            // request cv link
-
-            h2 {
-                display: inline-block;
-                border-radius: 10px;
-                font-size: 1em;
-                font-weight: 500;
-                margin-bottom: 1em;
-                padding: .5em;
-                transition: .5s ease;
-                position: relative;
-                // h2 box shadow
-                &::before,
-                &::after {
-                    content: '';
-                    position: absolute;
-                    top: 0;
-                    left: 0;
-                    width: 100%;
-                    height: 100%;
-                    transition: .5s ease;
-                    border-radius: 10px;
-                }
-                &::before {
-                    box-shadow: $box-dark-top-md;
-                }
-                &::after {
-                    opacity: 0;
-                    box-shadow: $box-light-top-md;
-                }
-                // end of h2 box shadow
-            }
-            // cv link hover state
-            &:hover {
-                #cv-download {
-                    letter-spacing: .1em;
-                }
-            }
-            // end of cv link hover state
-        }
-        // about title hover state
-        &:hover {
-            h2 {
-                &::before {opacity: 0};
-                &::after {opacity: 1};
-            }
-        }
-        // end of about title hover state
-        
-        // READ MORE ABOUT BTN
-        button {
-            background: $button-crimson;
-            box-shadow: $box-light-top-sm;
-            color: #fff;
-            margin: 1rem auto;
-            padding: .7rem;
-            width: 10rem;
-            cursor: pointer;
-            border-radius: .5rem;
-            border: none;
-            text-transform: capitalize;
-            letter-spacing: .05rem;
-            transition: .3s;
-            position: relative;
-            // button states
-            &.open {
-                letter-spacing: normal;
-                // 'close - read-more text in button'
-                &::after {
-                    position: absolute;
-                    content: 'close';
-                    display: grid;
-                    place-items: center;
-                    top: 0;
-                    left: 0;
-                    border-radius: .5rem;
-                    width: 100%;
-                    height: 100%;
-                    opacity: 1;
-                    box-shadow: $box-light-top-sm-hover;
-                    background: $button-crimson-hover;
-                    transition: .2s;
-
-                }
-            }
-
-            // end of button states
-
-            &:hover {
-                transform: scale(.97);
-                letter-spacing: normal;
-            }
-        }
-        // end of read more button
         // ARTICLE CONTAINER
         .article-container {
             // border: 2px solid red;
@@ -195,7 +77,6 @@
                             font-size: .85rem;
                             width: 8rem;
                             i {
-                                // font-size: inherit;
                                 color: $text-light;
                             }
                         }
@@ -227,7 +108,6 @@
                 }
 
                 .article-body {
-                    // border: 2px solid purple;
                     color: $overlay-blue-darker;
                     margin-top: 5vh;
                     .body-item {
@@ -235,8 +115,18 @@
                         padding-bottom: .5rem;
                         margin-bottom: 5vh;
                         position: relative;
-                        border-bottom: 1px solid hsla(240, 100%, 25%, .2);
+                        border-bottom: 1px solid $brand;
                         transition: border .5s;
+                        // ITEM PSEUDO BG
+                        &::after {
+                            content: '';
+                            position: absolute;
+                            inset: 0;
+                            background: #fafafa;
+                            z-index: -1;
+                            opacity: 0;
+                            transition: .25s;
+                        }
                         
                         @include lg {
                             margin-bottom: 10vh;
@@ -277,7 +167,11 @@
 
                         // BODY ITEM HOVER 
                         &:hover {
-                            border-bottom: 1px solid hsla(240, 100%, 25%, 1);
+                            border-bottom-color: $overlay-blue-light;
+                            background: #fafafa;
+                            &::after {
+                                opacity: 1;
+                            }
                         }
                     }
                 }
