work and cta btns cursor xsm

--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -225,6 +225,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    @include xsm {
+        cursor: default;
+    }
 
     &::before, &::after {
         content: '';
