--- a/css/style.css
+++ b/css/style.css
@@ -196,6 +196,11 @@
   justify-content: space-between;
   align-items: center;
 }
+@media (max-width: 450px) {
+  .btn {
+    cursor: default;
+  }
+}
 .btn::before, .btn::after {
   content: "";
   position: absolute;
@@ -2573,6 +2578,11 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+@media (max-width: 450px) {
+  .work .work-container .item .item-header .item-cta a {
+    cursor: default;
+  }
 }
 @media (min-width: 768px) {
   .work .work-container .item .item-header .item-cta a {
