--- a/sass/style.scss
+++ b/sass/style.scss
@@ -11,6 +11,7 @@
 @import 'projects';
 @import 'contact';
 @import 'footer';
+@import 'design';
 @import 'form';
 *, ::before, ::after {
     padding: 0;
